# Trading-Agent

./: .env.example  2026-05-13-013040-tell-me-the-architecture-of-this-project.txt  README.md  config.yaml  instruments.dhan.commodity.csv  instruments.dhan.csv  pyproject.toml  watchlist.commodity.txt  watchlist.index.txt  watchlist.txt
demand_supply_trading_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alerts.py  test_dhan_adapter.py  test_risk_and_execution.py  test_strategy_rules.py
trading_agent/: __init__.py  agent.py  alerts.py  api.py  backtest.py  config.py  dashboard.py  instruments.py  market_data.py  models.py  monitoring.py  notifications.py  risk.py  utils.py
trading_agent/execution/: __init__.py  base.py  dhan.py  kite.py  paper.py
trading_agent/strategy/: __init__.py  candles.py  curve.py  engine.py  scoring.py  trend.py  zones.py
